--- a/src/style.css
+++ b/src/style.css
@@ -1,89 +1,76 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
+.wrapper {
+  display: inline-flex;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-.card {
-  padding: 2em;
-}
-
-#app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+.card, #card {
+  max-width: 400px;
+  margin: 8px;
+  padding: 16px;
+  border: 8px solid gray;
+  background-color: black;
   text-align: center;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
+.card img, #card img {
+  width: 90%;
+  margin-left: auto;
+  margin-right: auto;
+  border: 4px solid grey;
+}
+
+.card h1, #card h1 {
+  font-size: 32px;
+  margin-bottom: 32px;
+  color: white;
+}
+
+details {
+  font-size: 16px;
+  color: white;
+  display: inline-block;
+}
+
+p {
+  font-size: 16px;
+  color: white;
+}
+
+#description.toggled {
+  display: none;
+}
+
+.button-other:hover, .button-other:focus {
+  color: orange;
+  background-color: white;
+}
+
+@media screen and (max-width: 799px) {
+  details {
+    display: none;
   }
-  a:hover {
-    color: #747bff;
+}
+
+@media screen and (max-width: 500px) {
+  div {
+    transform: scale(0.7);
   }
-  button {
-    background-color: #f9f9f9;
-  }
+}
+
+.button-other { 
+  font-size: 22px;
+  text-decoration: none;
+  background-color: #A6AEB1;
+  color: black;
+  padding: 8px 16px;
+  border-radius: 16px;
+  height:50px
+}
+
+#card.toggled {
+  max-width: 400px;
+  margin: 8px;
+  padding: 16px;
+  border: 8px solid gray;
+  background-color: #FC4B00;
+  text-align: center;
 }
